--- a/.drone.yml
+++ b/.drone.yml
@@ -13,3 +13,9 @@ steps:
       - latest
       - '1.0.1'
       - '1.0'
+- name: slack
+  image: plugins/slack
+  settings:
+    webhook:
+      from_secret: slack_webhook
+    channel: dev
